y.output
Grammar

    0 $accept: Program $end

    1 Program: %empty
    2        | Function Program

    3 Function: FUNCTION Ident SEMICOLON BEGINPARAMS Declarations ENDPARAMS BEGINLOCALS Declarations ENDLOCALS BEGINBODY Statements ENDBODY

    4 Declaration: Identifiers COLON INTEGER
    5            | Identifiers COLON ARRAY LSQUARE NUMBERS RSQUARE OF INTEGER

    6 Declarations: %empty
    7             | Declaration SEMICOLON Declarations

    8 Identifiers: Ident
    9            | Ident COMMA Identifiers

   10 Statements: Statement SEMICOLON Statements
   11           | Statement SEMICOLON

   12 Statement: Var ASSIGN Expression
   13          | IF BoolExp THEN Statements ElseStatement ENDIF
   14          | WHILE BoolExp BEGINLOOP Statements ENDLOOP
   15          | DO BEGINLOOP Statements ENDLOOP WHILE BoolExp
   16          | READ Vars
   17          | WRITE Vars
   18          | CONTINUE
   19          | RETURN Expression

   20 ElseStatement: %empty
   21              | ELSE Statements

   22 Var: Ident LSQUARE Expression RSQUARE
   23    | Ident

   24 Vars: Var
   25     | Var COMMA Vars

   26 Expression: MultExp
   27           | MultExp ADD Expression
   28           | MultExp SUB Expression

   29 Expressions: %empty
   30            | Expression COMMA Expressions
   31            | Expression

   32 MultExp: Term
   33        | Term MULT MultExp
   34        | Term DIV MultExp
   35        | Term MOD MultExp

   36 Term: Var
   37     | SUB Var
   38     | NUMBERS
   39     | SUB NUMBERS
   40     | LPAREN Expression RPAREN
   41     | SUB LPAREN Expression RPAREN
   42     | Ident LPAREN Expressions RPAREN

   43 BoolExp: RAExp
   44        | RAExp OR BoolExp

   45 RAExp: RExp
   46      | RExp AND RAExp

   47 RExp: NOT RExp1
   48     | RExp1

   49 RExp1: Expression Comp Expression
   50      | TRUE
   51      | FALSE
   52      | LPAREN BoolExp RPAREN

   53 Comp: EQ
   54     | NEQ
   55     | LT
   56     | GT
   57     | LTE
   58     | GTE

   59 Ident: IDENTIFIERS


Terminals, with rules where they appear

$end (0) 0
error (256)
FUNCTION (258) 3
BEGINPARAMS (259) 3
ENDPARAMS (260) 3
BEGINLOCALS (261) 3
ENDLOCALS (262) 3
BEGINBODY (263) 3
ENDBODY (264) 3
INTEGER (265) 4 5
ARRAY (266) 5
OF (267) 5
IF (268) 13
THEN (269) 13
ENDIF (270) 13
ELSE (271) 21
WHILE (272) 14 15
DO (273) 15
BEGINLOOP (274) 14 15
ENDLOOP (275) 14 15
CONTINUE (276) 18
READ (277) 16
WRITE (278) 17
TRUE (279) 50
FALSE (280) 51
RETURN (281) 19
SEMICOLON (282) 3 7 10 11
COLON (283) 4 5
COMMA (284) 9 25 30
LPAREN (285) 40 41 42 52
RPAREN (286) 40 41 42 52
LSQUARE (287) 5 22
RSQUARE (288) 5 22
NUMBERS (289) 5 38 39
IDENTIFIERS (290) 59
MULT (291) 33
DIV (292) 34
MOD (293) 35
ADD (294) 27
SUB (295) 28 37 39 41
LT (296) 55
LTE (297) 57
GT (298) 56
GTE (299) 58
EQ (300) 53
NEQ (301) 54
NOT (302) 47
AND (303) 46
OR (304) 44
ASSIGN (305) 12


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
Program (52)
    on left: 1 2, on right: 0 2
Function (53)
    on left: 3, on right: 2
Declaration (54)
    on left: 4 5, on right: 7
Declarations (55)
    on left: 6 7, on right: 3 7
Identifiers (56)
    on left: 8 9, on right: 4 5 9
Statements (57)
    on left: 10 11, on right: 3 10 13 14 15 21
Statement (58)
    on left: 12 13 14 15 16 17 18 19, on right: 10 11
ElseStatement (59)
    on left: 20 21, on right: 13
Var (60)
    on left: 22 23, on right: 12 24 25 36 37
Vars (61)
    on left: 24 25, on right: 16 17 25
Expression (62)
    on left: 26 27 28, on right: 12 19 22 27 28 30 31 40 41 49
Expressions (63)
    on left: 29 30 31, on right: 30 42
MultExp (64)
    on left: 32 33 34 35, on right: 26 27 28 33 34 35
Term (65)
    on left: 36 37 38 39 40 41 42, on right: 32 33 34 35
BoolExp (66)
    on left: 43 44, on right: 13 14 15 44 52
RAExp (67)
    on left: 45 46, on right: 43 44 46
RExp (68)
    on left: 47 48, on right: 45 46
RExp1 (69)
    on left: 49 50 51 52, on right: 47 48
Comp (70)
    on left: 53 54 55 56 57 58, on right: 49
Ident (71)
    on left: 59, on right: 3 8 9 22 23 42


State 0

    0 $accept: . Program $end

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 1 (Program)

    Program   go to state 2
    Function  go to state 3


State 1

    3 Function: FUNCTION . Ident SEMICOLON BEGINPARAMS Declarations ENDPARAMS BEGINLOCALS Declarations ENDLOCALS BEGINBODY Statements ENDBODY

    IDENTIFIERS  shift, and go to state 4

    Ident  go to state 5


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 6


State 3

    2 Program: Function . Program

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 1 (Program)

    Program   go to state 7
    Function  go to state 3


State 4

   59 Ident: IDENTIFIERS .

    $default  reduce using rule 59 (Ident)


State 5

    3 Function: FUNCTION Ident . SEMICOLON BEGINPARAMS Declarations ENDPARAMS BEGINLOCALS Declarations ENDLOCALS BEGINBODY Statements ENDBODY

    SEMICOLON  shift, and go to state 8


State 6

    0 $accept: Program $end .

    $default  accept


State 7

    2 Program: Function Program .

    $default  reduce using rule 2 (Program)


State 8

    3 Function: FUNCTION Ident SEMICOLON . BEGINPARAMS Declarations ENDPARAMS BEGINLOCALS Declarations ENDLOCALS BEGINBODY Statements ENDBODY

    BEGINPARAMS  shift, and go to state 9


State 9

    3 Function: FUNCTION Ident SEMICOLON BEGINPARAMS . Declarations ENDPARAMS BEGINLOCALS Declarations ENDLOCALS BEGINBODY Statements ENDBODY

    IDENTIFIERS  shift, and go to state 4

    $default  reduce using rule 6 (Declarations)

    Declaration   go to state 10
    Declarations  go to state 11
    Identifiers   go to state 12
    Ident         go to state 13


State 10

    7 Declarations: Declaration . SEMICOLON Declarations

    SEMICOLON  shift, and go to state 14


State 11

    3 Function: FUNCTION Ident SEMICOLON BEGINPARAMS Declarations . ENDPARAMS BEGINLOCALS Declarations ENDLOCALS BEGINBODY Statements ENDBODY

    ENDPARAMS  shift, and go to state 15


State 12

    4 Declaration: Identifiers . COLON INTEGER
    5            | Identifiers . COLON ARRAY LSQUARE NUMBERS RSQUARE OF INTEGER

    COLON  shift, and go to state 16


State 13

    8 Identifiers: Ident .
    9            | Ident . COMMA Identifiers

    COMMA  shift, and go to state 17

    $default  reduce using rule 8 (Identifiers)


State 14

    7 Declarations: Declaration SEMICOLON . Declarations

    IDENTIFIERS  shift, and go to state 4

    $default  reduce using rule 6 (Declarations)

    Declaration   go to state 10
    Declarations  go to state 18
    Identifiers   go to state 12
    Ident         go to state 13


State 15

    3 Function: FUNCTION Ident SEMICOLON BEGINPARAMS Declarations ENDPARAMS . BEGINLOCALS Declarations ENDLOCALS BEGINBODY Statements ENDBODY

    BEGINLOCALS  shift, and go to state 19


State 16

    4 Declaration: Identifiers COLON . INTEGER
    5            | Identifiers COLON . ARRAY LSQUARE NUMBERS RSQUARE OF INTEGER

    INTEGER  shift, and go to state 20
    ARRAY    shift, and go to state 21


State 17

    9 Identifiers: Ident COMMA . Identifiers

    IDENTIFIERS  shift, and go to state 4

    Identifiers  go to state 22
    Ident        go to state 13


State 18

    7 Declarations: Declaration SEMICOLON Declarations .

    $default  reduce using rule 7 (Declarations)


State 19

    3 Function: FUNCTION Ident SEMICOLON BEGINPARAMS Declarations ENDPARAMS BEGINLOCALS . Declarations ENDLOCALS BEGINBODY Statements ENDBODY

    IDENTIFIERS  shift, and go to state 4

    $default  reduce using rule 6 (Declarations)

    Declaration   go to state 10
    Declarations  go to state 23
    Identifiers   go to state 12
    Ident         go to state 13


State 20

    4 Declaration: Identifiers COLON INTEGER .

    $default  reduce using rule 4 (Declaration)


State 21

    5 Declaration: Identifiers COLON ARRAY . LSQUARE NUMBERS RSQUARE OF INTEGER

    LSQUARE  shift, and go to state 24


State 22

    9 Identifiers: Ident COMMA Identifiers .

    $default  reduce using rule 9 (Identifiers)


State 23

    3 Function: FUNCTION Ident SEMICOLON BEGINPARAMS Declarations ENDPARAMS BEGINLOCALS Declarations . ENDLOCALS BEGINBODY Statements ENDBODY

    ENDLOCALS  shift, and go to state 25


State 24

    5 Declaration: Identifiers COLON ARRAY LSQUARE . NUMBERS RSQUARE OF INTEGER

    NUMBERS  shift, and go to state 26


State 25

    3 Function: FUNCTION Ident SEMICOLON BEGINPARAMS Declarations ENDPARAMS BEGINLOCALS Declarations ENDLOCALS . BEGINBODY Statements ENDBODY

    BEGINBODY  shift, and go to state 27


State 26

    5 Declaration: Identifiers COLON ARRAY LSQUARE NUMBERS . RSQUARE OF INTEGER

    RSQUARE  shift, and go to state 28


State 27

    3 Function: FUNCTION Ident SEMICOLON BEGINPARAMS Declarations ENDPARAMS BEGINLOCALS Declarations ENDLOCALS BEGINBODY . Statements ENDBODY

    IF           shift, and go to state 29
    WHILE        shift, and go to state 30
    DO           shift, and go to state 31
    CONTINUE     shift, and go to state 32
    READ         shift, and go to state 33
    WRITE        shift, and go to state 34
    RETURN       shift, and go to state 35
    IDENTIFIERS  shift, and go to state 4

    Statements  go to state 36
    Statement   go to state 37
    Var         go to state 38
    Ident       go to state 39


State 28

    5 Declaration: Identifiers COLON ARRAY LSQUARE NUMBERS RSQUARE . OF INTEGER

    OF  shift, and go to state 40


State 29

   13 Statement: IF . BoolExp THEN Statements ElseStatement ENDIF

    TRUE         shift, and go to state 41
    FALSE        shift, and go to state 42
    LPAREN       shift, and go to state 43
    NUMBERS      shift, and go to state 44
    IDENTIFIERS  shift, and go to state 4
    SUB          shift, and go to state 45
    NOT          shift, and go to state 46

    Var         go to state 47
    Expression  go to state 48
    MultExp     go to state 49
    Term        go to state 50
    BoolExp     go to state 51
    RAExp       go to state 52
    RExp        go to state 53
    RExp1       go to state 54
    Ident       go to state 55


State 30

   14 Statement: WHILE . BoolExp BEGINLOOP Statements ENDLOOP

    TRUE         shift, and go to state 41
    FALSE        shift, and go to state 42
    LPAREN       shift, and go to state 43
    NUMBERS      shift, and go to state 44
    IDENTIFIERS  shift, and go to state 4
    SUB          shift, and go to state 45
    NOT          shift, and go to state 46

    Var         go to state 47
    Expression  go to state 48
    MultExp     go to state 49
    Term        go to state 50
    BoolExp     go to state 56
    RAExp       go to state 52
    RExp        go to state 53
    RExp1       go to state 54
    Ident       go to state 55


State 31

   15 Statement: DO . BEGINLOOP Statements ENDLOOP WHILE BoolExp

    BEGINLOOP  shift, and go to state 57


State 32

   18 Statement: CONTINUE .

    $default  reduce using rule 18 (Statement)


State 33

   16 Statement: READ . Vars

    IDENTIFIERS  shift, and go to state 4

    Var    go to state 58
    Vars   go to state 59
    Ident  go to state 39


State 34

   17 Statement: WRITE . Vars

    IDENTIFIERS  shift, and go to state 4

    Var    go to state 58
    Vars   go to state 60
    Ident  go to state 39


State 35

   19 Statement: RETURN . Expression

    LPAREN       shift, and go to state 61
    NUMBERS      shift, and go to state 44
    IDENTIFIERS  shift, and go to state 4
    SUB          shift, and go to state 45

    Var         go to state 47
    Expression  go to state 62
    MultExp     go to state 49
    Term        go to state 50
    Ident       go to state 55


State 36

    3 Function: FUNCTION Ident SEMICOLON BEGINPARAMS Declarations ENDPARAMS BEGINLOCALS Declarations ENDLOCALS BEGINBODY Statements . ENDBODY

    ENDBODY  shift, and go to state 63


State 37

   10 Statements: Statement . SEMICOLON Statements
   11           | Statement . SEMICOLON

    SEMICOLON  shift, and go to state 64


State 38

   12 Statement: Var . ASSIGN Expression

    ASSIGN  shift, and go to state 65


State 39

   22 Var: Ident . LSQUARE Expression RSQUARE
   23    | Ident .

    LSQUARE  shift, and go to state 66

    $default  reduce using rule 23 (Var)


State 40

    5 Declaration: Identifiers COLON ARRAY LSQUARE NUMBERS RSQUARE OF . INTEGER

    INTEGER  shift, and go to state 67


State 41

   50 RExp1: TRUE .

    $default  reduce using rule 50 (RExp1)


State 42

   51 RExp1: FALSE .

    $default  reduce using rule 51 (RExp1)


State 43

   40 Term: LPAREN . Expression RPAREN
   52 RExp1: LPAREN . BoolExp RPAREN

    TRUE         shift, and go to state 41
    FALSE        shift, and go to state 42
    LPAREN       shift, and go to state 43
    NUMBERS      shift, and go to state 44
    IDENTIFIERS  shift, and go to state 4
    SUB          shift, and go to state 45
    NOT          shift, and go to state 46

    Var         go to state 47
    Expression  go to state 68
    MultExp     go to state 49
    Term        go to state 50
    BoolExp     go to state 69
    RAExp       go to state 52
    RExp        go to state 53
    RExp1       go to state 54
    Ident       go to state 55


State 44

   38 Term: NUMBERS .

    $default  reduce using rule 38 (Term)


State 45

   37 Term: SUB . Var
   39     | SUB . NUMBERS
   41     | SUB . LPAREN Expression RPAREN

    LPAREN       shift, and go to state 70
    NUMBERS      shift, and go to state 71
    IDENTIFIERS  shift, and go to state 4

    Var    go to state 72
    Ident  go to state 39


State 46

   47 RExp: NOT . RExp1

    TRUE         shift, and go to state 41
    FALSE        shift, and go to state 42
    LPAREN       shift, and go to state 43
    NUMBERS      shift, and go to state 44
    IDENTIFIERS  shift, and go to state 4
    SUB          shift, and go to state 45

    Var         go to state 47
    Expression  go to state 48
    MultExp     go to state 49
    Term        go to state 50
    RExp1       go to state 73
    Ident       go to state 55


State 47

   36 Term: Var .

    $default  reduce using rule 36 (Term)


State 48

   49 RExp1: Expression . Comp Expression

    LT   shift, and go to state 74
    LTE  shift, and go to state 75
    GT   shift, and go to state 76
    GTE  shift, and go to state 77
    EQ   shift, and go to state 78
    NEQ  shift, and go to state 79

    Comp  go to state 80


State 49

   26 Expression: MultExp .
   27           | MultExp . ADD Expression
   28           | MultExp . SUB Expression

    ADD  shift, and go to state 81
    SUB  shift, and go to state 82

    $default  reduce using rule 26 (Expression)


State 50

   32 MultExp: Term .
   33        | Term . MULT MultExp
   34        | Term . DIV MultExp
   35        | Term . MOD MultExp

    MULT  shift, and go to state 83
    DIV   shift, and go to state 84
    MOD   shift, and go to state 85

    $default  reduce using rule 32 (MultExp)


State 51

   13 Statement: IF BoolExp . THEN Statements ElseStatement ENDIF

    THEN  shift, and go to state 86


State 52

   43 BoolExp: RAExp .
   44        | RAExp . OR BoolExp

    OR  shift, and go to state 87

    $default  reduce using rule 43 (BoolExp)


State 53

   45 RAExp: RExp .
   46      | RExp . AND RAExp

    AND  shift, and go to state 88

    $default  reduce using rule 45 (RAExp)


State 54

   48 RExp: RExp1 .

    $default  reduce using rule 48 (RExp)


State 55

   22 Var: Ident . LSQUARE Expression RSQUARE
   23    | Ident .
   42 Term: Ident . LPAREN Expressions RPAREN

    LPAREN   shift, and go to state 89
    LSQUARE  shift, and go to state 66

    $default  reduce using rule 23 (Var)


State 56

   14 Statement: WHILE BoolExp . BEGINLOOP Statements ENDLOOP

    BEGINLOOP  shift, and go to state 90


State 57

   15 Statement: DO BEGINLOOP . Statements ENDLOOP WHILE BoolExp

    IF           shift, and go to state 29
    WHILE        shift, and go to state 30
    DO           shift, and go to state 31
    CONTINUE     shift, and go to state 32
    READ         shift, and go to state 33
    WRITE        shift, and go to state 34
    RETURN       shift, and go to state 35
    IDENTIFIERS  shift, and go to state 4

    Statements  go to state 91
    Statement   go to state 37
    Var         go to state 38
    Ident       go to state 39


State 58

   24 Vars: Var .
   25     | Var . COMMA Vars

    COMMA  shift, and go to state 92

    $default  reduce using rule 24 (Vars)


State 59

   16 Statement: READ Vars .

    $default  reduce using rule 16 (Statement)


State 60

   17 Statement: WRITE Vars .

    $default  reduce using rule 17 (Statement)


State 61

   40 Term: LPAREN . Expression RPAREN

    LPAREN       shift, and go to state 61
    NUMBERS      shift, and go to state 44
    IDENTIFIERS  shift, and go to state 4
    SUB          shift, and go to state 45

    Var         go to state 47
    Expression  go to state 93
    MultExp     go to state 49
    Term        go to state 50
    Ident       go to state 55


State 62

   19 Statement: RETURN Expression .

    $default  reduce using rule 19 (Statement)


State 63

    3 Function: FUNCTION Ident SEMICOLON BEGINPARAMS Declarations ENDPARAMS BEGINLOCALS Declarations ENDLOCALS BEGINBODY Statements ENDBODY .

    $default  reduce using rule 3 (Function)


State 64

   10 Statements: Statement SEMICOLON . Statements
   11           | Statement SEMICOLON .

    IF           shift, and go to state 29
    WHILE        shift, and go to state 30
    DO           shift, and go to state 31
    CONTINUE     shift, and go to state 32
    READ         shift, and go to state 33
    WRITE        shift, and go to state 34
    RETURN       shift, and go to state 35
    IDENTIFIERS  shift, and go to state 4

    $default  reduce using rule 11 (Statements)

    Statements  go to state 94
    Statement   go to state 37
    Var         go to state 38
    Ident       go to state 39


State 65

   12 Statement: Var ASSIGN . Expression

    LPAREN       shift, and go to state 61
    NUMBERS      shift, and go to state 44
    IDENTIFIERS  shift, and go to state 4
    SUB          shift, and go to state 45

    Var         go to state 47
    Expression  go to state 95
    MultExp     go to state 49
    Term        go to state 50
    Ident       go to state 55


State 66

   22 Var: Ident LSQUARE . Expression RSQUARE

    LPAREN       shift, and go to state 61
    NUMBERS      shift, and go to state 44
    IDENTIFIERS  shift, and go to state 4
    SUB          shift, and go to state 45

    Var         go to state 47
    Expression  go to state 96
    MultExp     go to state 49
    Term        go to state 50
    Ident       go to state 55


State 67

    5 Declaration: Identifiers COLON ARRAY LSQUARE NUMBERS RSQUARE OF INTEGER .

    $default  reduce using rule 5 (Declaration)


State 68

   40 Term: LPAREN Expression . RPAREN
   49 RExp1: Expression . Comp Expression

    RPAREN  shift, and go to state 97
    LT      shift, and go to state 74
    LTE     shift, and go to state 75
    GT      shift, and go to state 76
    GTE     shift, and go to state 77
    EQ      shift, and go to state 78
    NEQ     shift, and go to state 79

    Comp  go to state 80


State 69

   52 RExp1: LPAREN BoolExp . RPAREN

    RPAREN  shift, and go to state 98


State 70

   41 Term: SUB LPAREN . Expression RPAREN

    LPAREN       shift, and go to state 61
    NUMBERS      shift, and go to state 44
    IDENTIFIERS  shift, and go to state 4
    SUB          shift, and go to state 45

    Var         go to state 47
    Expression  go to state 99
    MultExp     go to state 49
    Term        go to state 50
    Ident       go to state 55


State 71

   39 Term: SUB NUMBERS .

    $default  reduce using rule 39 (Term)


State 72

   37 Term: SUB Var .

    $default  reduce using rule 37 (Term)


State 73

   47 RExp: NOT RExp1 .

    $default  reduce using rule 47 (RExp)


State 74

   55 Comp: LT .

    $default  reduce using rule 55 (Comp)


State 75

   57 Comp: LTE .

    $default  reduce using rule 57 (Comp)


State 76

   56 Comp: GT .

    $default  reduce using rule 56 (Comp)


State 77

   58 Comp: GTE .

    $default  reduce using rule 58 (Comp)


State 78

   53 Comp: EQ .

    $default  reduce using rule 53 (Comp)


State 79

   54 Comp: NEQ .

    $default  reduce using rule 54 (Comp)


State 80

   49 RExp1: Expression Comp . Expression

    LPAREN       shift, and go to state 61
    NUMBERS      shift, and go to state 44
    IDENTIFIERS  shift, and go to state 4
    SUB          shift, and go to state 45

    Var         go to state 47
    Expression  go to state 100
    MultExp     go to state 49
    Term        go to state 50
    Ident       go to state 55


State 81

   27 Expression: MultExp ADD . Expression

    LPAREN       shift, and go to state 61
    NUMBERS      shift, and go to state 44
    IDENTIFIERS  shift, and go to state 4
    SUB          shift, and go to state 45

    Var         go to state 47
    Expression  go to state 101
    MultExp     go to state 49
    Term        go to state 50
    Ident       go to state 55


State 82

   28 Expression: MultExp SUB . Expression

    LPAREN       shift, and go to state 61
    NUMBERS      shift, and go to state 44
    IDENTIFIERS  shift, and go to state 4
    SUB          shift, and go to state 45

    Var         go to state 47
    Expression  go to state 102
    MultExp     go to state 49
    Term        go to state 50
    Ident       go to state 55


State 83

   33 MultExp: Term MULT . MultExp

    LPAREN       shift, and go to state 61
    NUMBERS      shift, and go to state 44
    IDENTIFIERS  shift, and go to state 4
    SUB          shift, and go to state 45

    Var      go to state 47
    MultExp  go to state 103
    Term     go to state 50
    Ident    go to state 55


State 84

   34 MultExp: Term DIV . MultExp

    LPAREN       shift, and go to state 61
    NUMBERS      shift, and go to state 44
    IDENTIFIERS  shift, and go to state 4
    SUB          shift, and go to state 45

    Var      go to state 47
    MultExp  go to state 104
    Term     go to state 50
    Ident    go to state 55


State 85

   35 MultExp: Term MOD . MultExp

    LPAREN       shift, and go to state 61
    NUMBERS      shift, and go to state 44
    IDENTIFIERS  shift, and go to state 4
    SUB          shift, and go to state 45

    Var      go to state 47
    MultExp  go to state 105
    Term     go to state 50
    Ident    go to state 55


State 86

   13 Statement: IF BoolExp THEN . Statements ElseStatement ENDIF

    IF           shift, and go to state 29
    WHILE        shift, and go to state 30
    DO           shift, and go to state 31
    CONTINUE     shift, and go to state 32
    READ         shift, and go to state 33
    WRITE        shift, and go to state 34
    RETURN       shift, and go to state 35
    IDENTIFIERS  shift, and go to state 4

    Statements  go to state 106
    Statement   go to state 37
    Var         go to state 38
    Ident       go to state 39


State 87

   44 BoolExp: RAExp OR . BoolExp

    TRUE         shift, and go to state 41
    FALSE        shift, and go to state 42
    LPAREN       shift, and go to state 43
    NUMBERS      shift, and go to state 44
    IDENTIFIERS  shift, and go to state 4
    SUB          shift, and go to state 45
    NOT          shift, and go to state 46

    Var         go to state 47
    Expression  go to state 48
    MultExp     go to state 49
    Term        go to state 50
    BoolExp     go to state 107
    RAExp       go to state 52
    RExp        go to state 53
    RExp1       go to state 54
    Ident       go to state 55


State 88

   46 RAExp: RExp AND . RAExp

    TRUE         shift, and go to state 41
    FALSE        shift, and go to state 42
    LPAREN       shift, and go to state 43
    NUMBERS      shift, and go to state 44
    IDENTIFIERS  shift, and go to state 4
    SUB          shift, and go to state 45
    NOT          shift, and go to state 46

    Var         go to state 47
    Expression  go to state 48
    MultExp     go to state 49
    Term        go to state 50
    RAExp       go to state 108
    RExp        go to state 53
    RExp1       go to state 54
    Ident       go to state 55


State 89

   42 Term: Ident LPAREN . Expressions RPAREN

    LPAREN       shift, and go to state 61
    NUMBERS      shift, and go to state 44
    IDENTIFIERS  shift, and go to state 4
    SUB          shift, and go to state 45

    $default  reduce using rule 29 (Expressions)

    Var          go to state 47
    Expression   go to state 109
    Expressions  go to state 110
    MultExp      go to state 49
    Term         go to state 50
    Ident        go to state 55


State 90

   14 Statement: WHILE BoolExp BEGINLOOP . Statements ENDLOOP

    IF           shift, and go to state 29
    WHILE        shift, and go to state 30
    DO           shift, and go to state 31
    CONTINUE     shift, and go to state 32
    READ         shift, and go to state 33
    WRITE        shift, and go to state 34
    RETURN       shift, and go to state 35
    IDENTIFIERS  shift, and go to state 4

    Statements  go to state 111
    Statement   go to state 37
    Var         go to state 38
    Ident       go to state 39


State 91

   15 Statement: DO BEGINLOOP Statements . ENDLOOP WHILE BoolExp

    ENDLOOP  shift, and go to state 112


State 92

   25 Vars: Var COMMA . Vars

    IDENTIFIERS  shift, and go to state 4

    Var    go to state 58
    Vars   go to state 113
    Ident  go to state 39


State 93

   40 Term: LPAREN Expression . RPAREN

    RPAREN  shift, and go to state 97


State 94

   10 Statements: Statement SEMICOLON Statements .

    $default  reduce using rule 10 (Statements)


State 95

   12 Statement: Var ASSIGN Expression .

    $default  reduce using rule 12 (Statement)


State 96

   22 Var: Ident LSQUARE Expression . RSQUARE

    RSQUARE  shift, and go to state 114


State 97

   40 Term: LPAREN Expression RPAREN .

    $default  reduce using rule 40 (Term)


State 98

   52 RExp1: LPAREN BoolExp RPAREN .

    $default  reduce using rule 52 (RExp1)


State 99

   41 Term: SUB LPAREN Expression . RPAREN

    RPAREN  shift, and go to state 115


State 100

   49 RExp1: Expression Comp Expression .

    $default  reduce using rule 49 (RExp1)


State 101

   27 Expression: MultExp ADD Expression .

    $default  reduce using rule 27 (Expression)


State 102

   28 Expression: MultExp SUB Expression .

    $default  reduce using rule 28 (Expression)


State 103

   33 MultExp: Term MULT MultExp .

    $default  reduce using rule 33 (MultExp)


State 104

   34 MultExp: Term DIV MultExp .

    $default  reduce using rule 34 (MultExp)


State 105

   35 MultExp: Term MOD MultExp .

    $default  reduce using rule 35 (MultExp)


State 106

   13 Statement: IF BoolExp THEN Statements . ElseStatement ENDIF

    ELSE  shift, and go to state 116

    $default  reduce using rule 20 (ElseStatement)

    ElseStatement  go to state 117


State 107

   44 BoolExp: RAExp OR BoolExp .

    $default  reduce using rule 44 (BoolExp)


State 108

   46 RAExp: RExp AND RAExp .

    $default  reduce using rule 46 (RAExp)


State 109

   30 Expressions: Expression . COMMA Expressions
   31            | Expression .

    COMMA  shift, and go to state 118

    $default  reduce using rule 31 (Expressions)


State 110

   42 Term: Ident LPAREN Expressions . RPAREN

    RPAREN  shift, and go to state 119


State 111

   14 Statement: WHILE BoolExp BEGINLOOP Statements . ENDLOOP

    ENDLOOP  shift, and go to state 120


State 112

   15 Statement: DO BEGINLOOP Statements ENDLOOP . WHILE BoolExp

    WHILE  shift, and go to state 121


State 113

   25 Vars: Var COMMA Vars .

    $default  reduce using rule 25 (Vars)


State 114

   22 Var: Ident LSQUARE Expression RSQUARE .

    $default  reduce using rule 22 (Var)


State 115

   41 Term: SUB LPAREN Expression RPAREN .

    $default  reduce using rule 41 (Term)


State 116

   21 ElseStatement: ELSE . Statements

    IF           shift, and go to state 29
    WHILE        shift, and go to state 30
    DO           shift, and go to state 31
    CONTINUE     shift, and go to state 32
    READ         shift, and go to state 33
    WRITE        shift, and go to state 34
    RETURN       shift, and go to state 35
    IDENTIFIERS  shift, and go to state 4

    Statements  go to state 122
    Statement   go to state 37
    Var         go to state 38
    Ident       go to state 39


State 117

   13 Statement: IF BoolExp THEN Statements ElseStatement . ENDIF

    ENDIF  shift, and go to state 123


State 118

   30 Expressions: Expression COMMA . Expressions

    LPAREN       shift, and go to state 61
    NUMBERS      shift, and go to state 44
    IDENTIFIERS  shift, and go to state 4
    SUB          shift, and go to state 45

    $default  reduce using rule 29 (Expressions)

    Var          go to state 47
    Expression   go to state 109
    Expressions  go to state 124
    MultExp      go to state 49
    Term         go to state 50
    Ident        go to state 55


State 119

   42 Term: Ident LPAREN Expressions RPAREN .

    $default  reduce using rule 42 (Term)


State 120

   14 Statement: WHILE BoolExp BEGINLOOP Statements ENDLOOP .

    $default  reduce using rule 14 (Statement)


State 121

   15 Statement: DO BEGINLOOP Statements ENDLOOP WHILE . BoolExp

    TRUE         shift, and go to state 41
    FALSE        shift, and go to state 42
    LPAREN       shift, and go to state 43
    NUMBERS      shift, and go to state 44
    IDENTIFIERS  shift, and go to state 4
    SUB          shift, and go to state 45
    NOT          shift, and go to state 46

    Var         go to state 47
    Expression  go to state 48
    MultExp     go to state 49
    Term        go to state 50
    BoolExp     go to state 125
    RAExp       go to state 52
    RExp        go to state 53
    RExp1       go to state 54
    Ident       go to state 55


State 122

   21 ElseStatement: ELSE Statements .

    $default  reduce using rule 21 (ElseStatement)


State 123

   13 Statement: IF BoolExp THEN Statements ElseStatement ENDIF .

    $default  reduce using rule 13 (Statement)


State 124

   30 Expressions: Expression COMMA Expressions .

    $default  reduce using rule 30 (Expressions)


State 125

   15 Statement: DO BEGINLOOP Statements ENDLOOP WHILE BoolExp .

    $default  reduce using rule 15 (Statement)
